# smart-street-lighting-lib

./: .gitignore  README.md  pyproject.toml
smart_street_lighting/: __init__.py
smart_street_lighting/core/: config.py  database.py  intent.py  logging.py  pipeline.py
smart_street_lighting/data/: __init__.py  download_sources.py  geometry.py  load_melbourne_data.py  osm_loader.py  safety_analysis.py  spatial_analysis.py  temporal_analysis.py
smart_street_lighting/llm/: calculation_engine.py
smart_street_lighting/rag/: ingest.py  lm_studio.py  query_engine.py
tests/: test_calculation_engine.py  test_data_loading.py  test_e2e.py  test_enhanced_engine.py  test_intent.py  test_osm_loader.py  test_safety_analysis.py  test_validator.py
