[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-street-lighting"
version = "0.1.0"
description = "AI-powered street lighting design for Melbourne (Deakin SIT764 capstone)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Hashem", email = "s225048421@deakin.edu.au" }]
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "folium>=0.15",
  "shapely>=2.0",
  "osmnx>=1.9",
  "geopy>=2.4",
  "python-dotenv>=1.0",
  "requests>=2.31",
  "openai>=1.0",
  "llama-index>=0.10",
  "llama-index-vector-stores-chroma>=0.1",
  "chromadb>=0.4",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/hashem59/smart-street-lighting-lib"

[tool.setuptools.packages.find]
include = ["smart_street_lighting*"]
